force-app/main/default/objects/Driver_Interaction__c/Driver_Interaction__c.object-meta.xml
<CustomObject>
    <label>Driver Interaction</label>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Driver Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Driver Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>