force-app/main/default/objects/Driver_Interaction__c/fields/ActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>ActivatedDate__c</fullName>
    <label>Activated Date</label>
    <type>Date</type>
</CustomField>