force-app/main/default/objects/Driver_Interaction__c/fields/DeactivatedDate__c.field-meta.xml
<CustomField>
    <fullName>DeactivatedDate__c</fullName>
    <label>Deactivated Date</label>
    <type>Date</type>
</CustomField>