force-app/main/default/objects/Driver_Interaction__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Driver Interactions</relationshipLabel>
    <relationshipName>Driver_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>