force-app/main/default/objects/Driver_Interaction__c/fields/No_Of_Active_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Active_Days__c</fullName>
    <formula>1+if(isblank(DeactivatedDate__c),(TODAY()-ActivatedDate__c),(DeactivatedDate__c-ActivatedDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Active Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>